<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="TextViewName">Look at my GUI</string>
    <string name="ButtonOneText">Click here</string>
    <string name="checkbox">Check this out!</string>
    <string name="switchText">Switch on / off</string>
    <string name="editTextText">Type here</string>
    <string name="emailTextView">Enter your email address:</string>
    <string name="emailEditText">Type email here</string>
    <string name="passwordTextView">Type your password:</string>
    <string name="passwordEditText"> </string>
    <string name="loginButtonText">Login</string>
    <string name="YourProfile">Your Profile</string>
    <string name="yourName">Your name: </string>
    <string name="enterNameText">Enter your name</string>
    <string name="yourEmail">Your email: </string>
    <string name="enteredEmail">Enter your email</string>
    <string name="picture">Your picture:</string>
    <string name="notes">Click the button above to take a picture</string>
    <string name="goToChatText">go To Chat</string>
    <string name="sendButton">send</string>
    <string name="receiveButton">receive</string>
    <string name="typeHere">Type Here</string>
    <string name="goToToolbar">Go to Toolbar page</string>
    <string name="car">car</string>
    <string name="currency">Currency</string>
    <string name="news">News</string>
    <string name="menuDialog">Type here</string>
    <string name="recipe">Recipe</string>


</resources>
