<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/text"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewName"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/ButtonOneText" />

    <CheckBox
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/checkbox" />

    <ImageButton
    android:id="@+id/buttonLeft"
        android:padding="0dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/girl"
    android:layout_column="0"
    android:layout_row="2"
    />

    <Switch
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/switchText"

        />
    <EditText
        android:hint="@string/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:layout_column="0"
        />/.




</GridLayout>