<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextViewName"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="fill">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/ButtonOneText" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/checkbox" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="1"
        android:gravity="fill"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <ImageButton
        android:id="@+id/button2"
        android:padding="0dp"
        android:layout_width="0dp"
        android:layout_weight=".50"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
         />

    <Switch
        android:layout_height="wrap_content"
        android:text="@string/switchText"
        android:layout_width="0dp"
        android:layout_weight=".50"
        />
    </LinearLayout>

    <EditText
        android:hint="@string/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        />/
</LinearLayout>